// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSubmissionRow renders 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Assignment.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#00AC18",
              },
            ],
          ]
        }
      >
        Submitted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "borderColor": "transparent",
                "flex": 1,
                "height": 18,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 18,
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LinearGradient
              colors={
                Array [
                  "#008EE2",
                  "#00C1F3",
                ]
              }
              end={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 0.8,
                  "height": 18,
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "flex": 0,
                "fontSize": 14,
                "fontWeight": "500",
                "minWidth": 67,
              },
            ]
          }
        >
          8/10
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserSubmissionRow renders complete 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Assignment.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#00AC18",
              },
            ],
          ]
        }
      >
        Submitted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "borderColor": "transparent",
                "flex": 1,
                "height": 18,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 18,
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LinearGradient
              colors={
                Array [
                  "#008EE2",
                  "#00C1F3",
                ]
              }
              end={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 1,
                  "height": 18,
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "flex": 0,
                "fontSize": 14,
                "fontWeight": "500",
                "minWidth": 67,
              },
            ]
          }
        >
          Complete
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserSubmissionRow renders discussion 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Discussions.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#00AC18",
              },
            ],
          ]
        }
      >
        Submitted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "borderColor": "transparent",
                "flex": 1,
                "height": 18,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 18,
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LinearGradient
              colors={
                Array [
                  "#008EE2",
                  "#00C1F3",
                ]
              }
              end={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 0.8,
                  "height": 18,
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "flex": 0,
                "fontSize": 14,
                "fontWeight": "500",
                "minWidth": 67,
              },
            ]
          }
        >
          8/10
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserSubmissionRow renders excused 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Assignment.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#8B969E",
              },
            ],
          ]
        }
      >
        Excused
      </Text>
    </View>
  </View>
</View>
`;

exports[`UserSubmissionRow renders incomplete 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Assignment.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#00AC18",
              },
            ],
          ]
        }
      >
        Submitted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "borderColor": "transparent",
                "flex": 1,
                "height": 18,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 18,
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LinearGradient
              colors={
                Array [
                  "#008EE2",
                  "#00C1F3",
                ]
              }
              end={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 0,
                  "height": 18,
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "flex": 0,
                "fontSize": 14,
                "fontWeight": "500",
                "minWidth": 67,
              },
            ]
          }
        >
          Incomplete
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserSubmissionRow renders missing submittion types 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Assignment.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#00AC18",
              },
            ],
          ]
        }
      >
        Submitted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "borderColor": "transparent",
                "flex": 1,
                "height": 18,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 18,
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LinearGradient
              colors={
                Array [
                  "#008EE2",
                  "#00C1F3",
                ]
              }
              end={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 0.8,
                  "height": 18,
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "flex": 0,
                "fontSize": 14,
                "fontWeight": "500",
                "minWidth": 67,
              },
            ]
          }
        >
          8/10
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserSubmissionRow renders needs grading 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Assignment.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#00AC18",
              },
            ],
          ]
        }
      >
        Submitted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          color="#FC5E13"
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "fontSize": 11,
                  "fontWeight": "500",
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 6,
                  "paddingRight": 6,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                Object {
                  "borderColor": "#FC5E13",
                  "color": "#FC5E13",
                },
                undefined,
              ],
            ]
          }
        >
          NEEDS GRADING
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserSubmissionRow renders online quiz 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Quiz.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#00AC18",
              },
            ],
          ]
        }
      >
        Submitted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "borderColor": "transparent",
                "flex": 1,
                "height": 18,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 18,
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LinearGradient
              colors={
                Array [
                  "#008EE2",
                  "#00C1F3",
                ]
              }
              end={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 0.8,
                  "height": 18,
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "flex": 0,
                "fontSize": 14,
                "fontWeight": "500",
                "minWidth": 67,
              },
            ]
          }
        >
          8/10
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserSubmissionRow renders published 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
  testID="user-submission-row.cell-1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
      testID="user-submission-row-icon-published-1.icon-img"
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/images/course/Assignment.png",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        learn to write code
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "marginBottom": 8,
              },
              Object {
                "color": "#00AC18",
              },
            ],
          ]
        }
      >
        Submitted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "borderColor": "transparent",
                "flex": 1,
                "height": 18,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 18,
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LinearGradient
              colors={
                Array [
                  "#008EE2",
                  "#00C1F3",
                ]
              }
              end={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 0.8,
                  "height": 18,
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "flex": 0,
                "fontSize": 14,
                "fontWeight": "500",
                "minWidth": 67,
              },
            ]
          }
        >
          8/10
        </Text>
      </View>
    </View>
  </View>
</View>
`;
